@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.14) unstable; urgency=low
 
   * connection: drop connections when the limit is exceeded
+  * resource-address: added BASE support
 
  --
 
